<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:background="#fa8837">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relativeLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/titel"
            android:id="@+id/textView"
            android:textColor="#000000"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="34sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView_body"
            android:background="@drawable/body"
            android:layout_gravity="center"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/body" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/relativeLayout"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="384dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eyes"
                android:id="@+id/checkBox_eyes"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="selectItem"
                android:layout_above="@+id/checkBox_nose"
                android:layout_alignTop="@+id/checkBox_mustache" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nose"
                android:id="@+id/checkBox_nose"
                android:onClick="selectItem"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_above="@+id/checkBox_mouth" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mouth"
                android:id="@+id/checkBox_mouth"
                android:onClick="selectItem"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ears"
                android:id="@+id/checkBox_ears"
                android:onClick="selectItem"
                android:layout_above="@+id/checkBox_eyebrows"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignLeft="@+id/checkBox_shoes"
                android:layout_alignStart="@+id/checkBox_shoes" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eyebrows"
                android:id="@+id/checkBox_eyebrows"
                android:onClick="selectItem"
                android:layout_above="@+id/checkBox_glasses"
                android:layout_alignLeft="@+id/checkBox_glasses"
                android:layout_alignStart="@+id/checkBox_glasses" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="arms        "
                android:id="@+id/checkBox_arms"
                android:layout_below="@+id/checkBox_eyebrows"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="selectItem" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoes"
                android:id="@+id/checkBox_shoes"
                android:onClick="selectItem"
                android:layout_above="@+id/checkBox_arms"
                android:layout_alignLeft="@+id/checkBox_arms"
                android:layout_alignStart="@+id/checkBox_arms" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/glasses"
                android:id="@+id/checkBox_glasses"
                android:onClick="selectItem"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mustache"
                android:id="@+id/checkBox_mustache"
                android:onClick="selectItem"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/checkBox_ears"
                android:layout_alignLeft="@+id/checkBox_eyebrows"
                android:layout_alignStart="@+id/checkBox_eyebrows" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hat"
                android:id="@+id/checkBox_hat"
                android:onClick="selectItem"
                android:layout_above="@+id/checkBox_mustache"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignLeft="@+id/checkBox_mustache"
                android:layout_alignStart="@+id/checkBox_mustache" />

        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView_hat"
            android:layout_alignTop="@+id/imageView_body"
            android:layout_centerHorizontal="true"
            android:background="@drawable/hat"
            android:contentDescription="@string/hat"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView_ears"
            android:background="@drawable/ears"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/ears"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView_nose"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/nose"
            android:contentDescription="@string/nose"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView_eyes"
            android:background="@drawable/eyes"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/eyes"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView_mouth"
            android:background="@drawable/mouth"
            android:layout_alignTop="@+id/imageView_arms"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/mouth"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView_eyebrows"
            android:background="@drawable/eyebrows"
            android:layout_alignBottom="@+id/imageView_ears"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/eyebrows"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView_arms"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/arms"
            android:contentDescription="@string/arms"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView_glasses"
            android:background="@drawable/glasses"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/glasses"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView_mustache"
            android:background="@drawable/mustache"
            android:contentDescription="@string/mustache"
            android:visibility="invisible"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/imageView_body" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView_shoes"
            android:background="@drawable/shoes"
            android:contentDescription="@string/shoes"
            android:visibility="invisible"
            android:cropToPadding="false"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</RelativeLayout>
